<resources>
    <string name="app_name" translatable="false">SkyScanner</string>
    <string name="slogan" translatable="false">Stay one step a head</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="home" translatable="false">Home</string>
    <string name="favourites" translatable="false">Favourites</string>
    <string name="alerts" translatable="false">Alerts</string>
    <string name="settings" translatable="false">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="temperature" translatable="false">Temperature</string>
    <string name="language" translatable="false">Language</string>
    <string name="lang_arabic" translatable="false">Arabic</string>
    <string name="lang_english" translatable="false">English</string>
    <string name="header_location" translatable="false">Location</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="map" translatable="false">Map</string>
    <string name="unit_kelvin" translatable="false">Kelvin</string>
    <string name="unit_celsius" translatable="false">Celsius</string>
    <string name="unit_fahrenheit" translatable="false">Fahrenheit</string>
    <string name="header_notifications" translatable="false">Notifications</string>
    <string name="enable" translatable="false">Enable</string>
    <string name="disable" translatable="false">Disable</string>
    <string name="with" translatable="false">with</string>
    <string name="header_hourly_forecast" translatable="false">Hourly Forecast</string>
    <string name="header_daily_forecast" translatable="false">Daily Forecast</string>
    <string name="header_initial_setup" translatable="false">Initial SetUp</string>
    <string name="done" translatable="false">Done</string>
    <string name="ultra_violet" translatable="false">Ultra Violet</string>
    <string name="visibility" translatable="false">Visibility</string>
    <string name="cloud" translatable="false">Cloud</string>
    <string name="humidity" translatable="false">Humidity</string>
    <string name="pressure" translatable="false">Pressure</string>
    <string name="wind" translatable="false">Wind</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="unit" translatable="false">Unit</string>
    <string name="miles_hour" translatable="false">Miles/Hour</string>
    <string name="confirm_yes" translatable="false">Yes</string>
    <string name="meter_sec" translatable="false">Meter/Sec</string>
    <string name="are_you_sure" translatable="false">Are you sure you want to delete this location from your favourite list ?</string>
    <string name="delete_alert_title" translatable="false">Delete Alert</string>
    <string name="location_alert_title" translatable="false">Map Alert</string>
    <string name="from" translatable="false">From</string>
    <string name="to" translatable="false">T0</string>
    <string name="save" translatable="false">Save</string>
    <string name="draw_overlays" translatable="false">Please, Enable Draw Overlays permission.</string>
    <string name="draw_overlays_description" translatable="false">You will not receive notifications while the app is in the background if you disable these permissions.\n\nEnable…\n1) Display pop-up windows while running in the background \n2) Display pop-up window</string>
    <string name="go_to_settings" translatable="false">Go to Settings</string>
    <string name="NoAlerts" translatable="false">No Alerts. The Weather is fine</string>
    <string name="error_msg_permission_required" translatable="false">Permission required!\nPlease, give the permission to work correctly!</string>
    <string name="empty_alarm_from" translatable="false">You must select (From) date and time!</string>
    <string name="empty_alarm_to" translatable="false">You must select (To) date and time!</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="ok" translatable="false">OK</string>
    <string name="dismiss" translatable="false">Dismiss</string>
    <string name="weather_alert" translatable="false">Weather alert</string>
    <string name="be_prepared" translatable="false">Be Prepared</string>
    <string name="connect_wifi" translatable="false">please,connect to WiFi first.</string>
    <string name="offline" translatable="false">You\'re offline, this is your stored data</string>
    <string name="problem" translatable="false">there is a problem</string>
</resources>