<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="290dp"
    android:layout_gravity="center"
    android:background="@drawable/rounded_button">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="25dp"
        android:background="@drawable/baseline_settings_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_initial_setup"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:padding="5dp"
        android:text="@string/header_location"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text=":"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/textLoc"
        app:layout_constraintStart_toEndOf="@id/textLoc" />

    <RadioGroup
        android:id="@+id/rgChooseLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textLoc">

        <RadioButton
            android:id="@+id/rbgps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/gps"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <RadioButton
            android:id="@+id/rbMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="19sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:padding="5dp"
        android:text="@string/header_notifications"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/textLoc" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewNotification" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSetUpDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:padding="8dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:backgroundTint="@color/my_simon"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotification" />
</androidx.constraintlayout.widget.ConstraintLayout>