<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</androidx.constraintlayout.widget.ConstraintLayout>-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="300sp"
android:layout_height="wrap_content"
    android:layout_gravity="center">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:padding="15dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="-5dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#29292B"
        android:layout_width="300sp"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:padding="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="-1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:focusable="true"
            android:padding="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="-1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/startDateid"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/endDateid"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="true"

            android:inputType="none"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/startDateid"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

       <!-- <RadioGroup
            android:id="@+id/alertOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateid">

            <RadioButton
                android:id="@+id/AlarmAlerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_40sdp"
                android:checked="true"
                android:textColor="#1C2665"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:text="@string/alarm" />

            <RadioButton
                android:id="@+id/NotificationAlerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1C2665"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:text="@string/notificationAlertsOption" />

        </RadioGroup>-->

        <androidx.cardview.widget.CardView

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:focusable="true"
            android:padding="10dp"
            app:cardCornerRadius="15sp"
            app:cardElevation="-1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDateid">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_bg">

                <Button
                    android:id="@+id/saveAlertsData"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:textSize="19sp"
                    android:background="@android:color/transparent"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    tools:ignore="TouchTargetSizeCheck" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>